--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,8 +28,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+
     - name: Run chmod to make gradlew executable
       run: chmod +x ./gradlew
+
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
@@ -37,7 +39,7 @@ jobs:
 
       # build한 후 프로젝트를 압축합니다.
     - name: Make zip file
-      run: zip -r ./practice-deploy.zip .
+      run: zip -r ./deploy-test.zip .
       shell: bash
 
       # Access Key와 Secret Access Key를 통해 권한을 확인합니다.
@@ -51,4 +53,4 @@ jobs:
 
       # 압축한 프로젝트를 S3로 전송합니다.
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
+      run: aws s3 cp --region ap-northeast-2 ./deploy-test.zip s3://$S3_BUCKET_NAME/deploy-test.zip
